[package]
name = "harbor"
version = "0.1.0"
edition = "2021"

[features]
default = []
vendored = ["rusqlite/bundled-sqlcipher-vendored-openssl"]

[dependencies]
anyhow = "1.0.86"
log = "0.4"
pretty_env_logger = "0.5" # todo swap to a file logger
iced = { git = "https://github.com/iced-rs/iced", rev = "b30d34f", features = ["debug", "tokio", "svg", "qr_code", "advanced"] }
lyon_algorithms = "1.0"
once_cell = "1.0"
tokio = { version = "1.38", features = ["full"] }
palette = "0.7"
config = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
home = "0.5.9"
chrono = "0.4.38"
rusqlite = { version = "0.31.0", features = ["sqlcipher"] }
diesel = { version = "2.1.6", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
uuid = { version = "1.8", features = ["v4"] }
async-trait = "0.1.77"
bincode = "1.3.3"
hex = "0.4.3"

bitcoin = { version = "0.30.2", features = ["base64"] }
bip39 = "2.0.0"
fedimint-api-client = { git = "https://github.com/benthecarman/fedimint", branch = "split-test" }
fedimint-client = { git = "https://github.com/benthecarman/fedimint", branch = "split-test" }
fedimint-core = { git = "https://github.com/benthecarman/fedimint", branch = "split-test" }
fedimint-wallet-client = { git = "https://github.com/benthecarman/fedimint", branch = "split-test" }
fedimint-mint-client = { git = "https://github.com/benthecarman/fedimint", branch = "split-test" }
fedimint-ln-client = { git = "https://github.com/benthecarman/fedimint", branch = "split-test" }
fedimint-bip39 = { git = "https://github.com/benthecarman/fedimint", branch = "split-test" }
fedimint-ln-common = { git = "https://github.com/benthecarman/fedimint", branch = "split-test" }

[dev-dependencies]
tempdir = "0.3.7"
